{
  "version": 4,
  "terraform_version": "1.9.6",
  "serial": 36,
  "lineage": "02206bb6-154e-4022-508e-f99b79f5bb9a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "group10_nginx_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:471112673321:instance/i-0ef157547f2e24fb8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ef157547f2e24fb8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-046482af646a66f8e",
            "private_dns": "ip-10-0-1-96.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.96",
            "public_ip": "98.84.166.64",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0872a43a0a38dbc16",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-02b6a1a54b97892ef"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06a4a24d5a189f321",
            "tags": {
              "name": "devops-group-10"
            },
            "tags_all": {
              "name": "devops-group-10"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02b6a1a54b97892ef"
            ]
          },
          "dependencies": [
            "aws_security_group.tco_vpc_sg",
            "aws_subnet.group10_public_subnet",
            "aws_vpc.tco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tco_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:internet-gateway/igw-02a07d8fc024a434c",
            "id": "igw-02a07d8fc024a434c",
            "owner_id": "471112673321",
            "tags": {
              "name": "devops-group-10"
            },
            "tags_all": {
              "name": "devops-group-10"
            },
            "vpc_id": "vpc-0ed0a745e15d67ac1"
          },
          "dependencies": [
            "aws_vpc.tco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tco_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:route-table/rtb-0aa8fddfa042a464b",
            "id": "rtb-0aa8fddfa042a464b",
            "owner_id": "471112673321",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02a07d8fc024a434c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "devops-group-10"
            },
            "tags_all": {
              "name": "devops-group-10"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ed0a745e15d67ac1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tco_igw",
            "aws_vpc.tco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tco-rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a77c04cf10a7e317",
            "route_table_id": "rtb-0aa8fddfa042a464b",
            "subnet_id": "subnet-06a4a24d5a189f321"
          },
          "dependencies": [
            "aws_internet_gateway.tco_igw",
            "aws_route_table.tco_rt",
            "aws_subnet.group10_public_subnet",
            "aws_vpc.tco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tco_vpc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:security-group/sg-02b6a1a54b97892ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02b6a1a54b97892ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241006130427060700000001",
            "name_prefix": "terraform-",
            "owner_id": "471112673321",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ed0a745e15d67ac1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.tco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "group10_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:subnet/subnet-06a4a24d5a189f321",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06a4a24d5a189f321",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112673321",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "devops-group-10"
            },
            "tags_all": {
              "name": "devops-group-10"
            },
            "vpc_id": "vpc-0ed0a745e15d67ac1"
          },
          "dependencies": [
            "aws_vpc.tco_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "tco_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112673321:vpc/vpc-0ed0a745e15d67ac1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09fb29390f51a2f8f",
            "default_route_table_id": "rtb-0877f56a4ad04f0cc",
            "default_security_group_id": "sg-0314f3ea64395a8f5",
            "dhcp_options_id": "dopt-0ca335e3ce8e30a45",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ed0a745e15d67ac1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0877f56a4ad04f0cc",
            "owner_id": "471112673321",
            "tags": {
              "name": "devops-group-10"
            },
            "tags_all": {
              "name": "devops-group-10"
            }
          }
        }
      ]
    }
  ]
}